[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/levels/Carl/CarlsEnding.gd" type="Script" id=1]
[ext_resource path="res://assets/tilesets/Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://actors/character/snowman/Snowman.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Animation/Carl/Idle/carl-idle1.png" type="Texture" id=4]
[ext_resource path="res://Art/Animation/Carl/Idle/carl-idle2.png" type="Texture" id=5]
[ext_resource path="res://Art/Animation/Carl/Idle/carl-idle3.png" type="Texture" id=6]
[ext_resource path="res://Art/Animation/Carl/Idle/carl-idle4.png" type="Texture" id=7]
[ext_resource path="res://scenes/levels/Carl/CarlDialogue.gd" type="Script" id=8]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim1.png" type="Texture" id=9]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim2.png" type="Texture" id=10]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim3.png" type="Texture" id=11]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim4.png" type="Texture" id=12]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim5.png" type="Texture" id=13]
[ext_resource path="res://Art/Animation/DialogboxAnim/DialogueBoxAnim6.png" type="Texture" id=14]
[ext_resource path="res://Art/Animation/Button/ButtonAnim1.png" type="Texture" id=15]
[ext_resource path="res://Art/Animation/Button/ButtonAnim2.png" type="Texture" id=16]
[ext_resource path="res://Art/Animation/Button/ButtonAnim3.png" type="Texture" id=17]
[ext_resource path="res://Art/Animation/Button/ButtonAnim4.png" type="Texture" id=18]
[ext_resource path="res://Art/Animation/Button/ButtonAnim5.png" type="Texture" id=19]
[ext_resource path="res://Art/Animation/Button/ButtonAnim6.png" type="Texture" id=20]
[ext_resource path="res://assets/backgrounds/background.png" type="Texture" id=21]
[ext_resource path="res://assets/tilesets/CameraShade.png" type="Texture" id=22]
[ext_resource path="res://assets/Scene Props/Torch.tscn" type="PackedScene" id=23]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 189.511, 103.801 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Structure" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 2, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, 65533, 1, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 3, 0, 3, 3, 0, 4, 0, 0, 5, 0, 0, 6, 2, 0, 7, 3, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 2, 0, 65540, 1, 0, 65541, 1, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 3, 0, 65546, 0, 0, 65547, 2, 0, 65548, 2, 0, 65549, 0, 0, 65550, 2, 0, 65551, 3, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 0, 0, 131072, 3, 0, 131073, 1, 0, 131074, 0, 0, 131075, 3, 0, 131076, 3, 0, 131077, 1, 0, 131078, 1, 0, 131079, 0, 0, 131080, 1, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 2, 0, 131086, 2, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 262139, 1, 0, 262140, 1, 0, 262141, 0, 0, 262142, 3, 0, 262143, 0, 0, 196608, 1, 0, 196623, 3, 0, 196624, 3, 0, 196625, 0, 0, 196626, 0, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 0, 0, 327678, 3, 0, 327679, 0, 0, 262144, 1, 0, 262159, 3, 0, 262160, 0, 0, 262161, 3, 0, 262162, 0, 0, 393210, 1, 0, 393211, 0, 0, 393212, 1, 0, 393213, 3, 0, 393214, 0, 0, 393215, 1, 0, 327680, 2, 0, 327695, 0, 0, 327696, 0, 0, 327697, 3, 0, 327698, 0, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 2, 0, 458750, 0, 0, 458751, 0, 0, 393216, 1, 0, 393228, 34, 0, 393229, 34, 0, 393230, 34, 0, 393231, 3, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 524282, 1, 0, 524283, 1, 0, 524284, 2, 0, 524285, 3, 0, 524286, 2, 0, 524287, 0, 0, 458752, 2, 0, 458760, 45, 0, 458767, 5, 0, 458768, 0, 0, 458769, 1, 0, 458770, 0, 0, 589818, 1, 0, 589819, 1, 0, 589820, 0, 0, 589821, 1, 0, 589822, 0, 0, 589823, 3, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 3, 0, 524293, 3, 0, 524294, 0, 0, 524295, 3, 0, 524296, 3, 0, 524297, 0, 0, 524298, 3, 0, 524299, 0, 0, 524300, 3, 0, 524301, 3, 0, 524302, 5, 0, 524303, 5, 0, 524304, 0, 0, 524305, 1, 0, 655354, 1, 0, 655355, 1, 0, 655356, 0, 0, 655357, 0, 0, 655358, 2, 0, 655359, 0, 0, 589824, 0, 0, 589825, 3, 0, 589826, 0, 0, 589827, 0, 0, 589828, 3, 0, 589829, 3, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 1, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 720890, 1, 0, 720891, 1, 0, 720892, 1, 0, 720893, 1, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 1, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 3, 0, 655375, 3, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 0, 0, 786430, 1, 0, 786431, 0, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 851967, 0, 0 )

[node name="Snowman" parent="." instance=ExtResource( 3 )]
position = Vector2( 98.4319, 476.123 )

[node name="Carl" type="AnimatedSprite" parent="."]
position = Vector2( 650, 430 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Carl2" type="AnimatedSprite" parent="."]
position = Vector2( 650, 430 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CarlDialogue" type="Area2D" parent="."]
position = Vector2( 68.8148, 4.66541 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarlDialogue"]
position = Vector2( 569.504, 409.331 )
shape = SubResource( 2 )

[node name="Dialogue" type="AnimatedSprite" parent="CarlDialogue"]
visible = false
position = Vector2( 447.551, 351.524 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
frame = 5
playing = true

[node name="Label1" type="Label" parent="CarlDialogue"]
visible = false
margin_left = 344.0
margin_top = 325.0
margin_right = 384.0
margin_bottom = 339.0
text = "Hello there, 
so you are the one trying to save
this dumb tradition called 
christmas ?"

[node name="Label2" type="Label" parent="CarlDialogue"]
visible = false
margin_left = 344.0
margin_top = 325.0
margin_right = 384.0
margin_bottom = 339.0
text = "Were my warnings not enough?
Bombarding Santas sleigh...
sending Krampus to kill this dumb 
Grinch "

[node name="Label3" type="Label" parent="CarlDialogue"]
visible = false
margin_left = 344.0
margin_top = 325.0
margin_right = 384.0
margin_bottom = 339.0
text = "I like your bravery so I will offer
you to join me and help to destroy
Santa and his festives... or you are
going to die right here."

[node name="Label4" type="Label" parent="CarlDialogue"]
visible = false
margin_left = 344.0
margin_top = 325.0
margin_right = 384.0
margin_bottom = 339.0
text = "Its your choice."

[node name="Label5" type="Label" parent="CarlDialogue"]
visible = false
margin_left = 344.0
margin_top = 325.0
margin_right = 384.0
margin_bottom = 339.0
text = "You have 10 seconds to decide.
If you want to join me just press E.
If not wait"

[node name="Button" type="AnimatedSprite" parent="CarlDialogue"]
position = Vector2( 581.561, 413.554 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Timer" type="Timer" parent="CarlDialogue"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( -54.279, -357.983 )
scale = Vector2( 21.3491, 12.4072 )
z_index = -3
texture = ExtResource( 21 )

[node name="Background2" type="Sprite" parent="."]
modulate = Color( 0.603922, 0, 0, 0.164706 )
self_modulate = Color( 0.929412, 0.105882, 0.105882, 1 )
position = Vector2( -54.279, -357.983 )
scale = Vector2( 21.3491, 12.4072 )
z_index = 4
texture = ExtResource( 22 )

[node name="Torch" parent="." instance=ExtResource( 23 )]
position = Vector2( 341.858, 375.317 )

[connection signal="area_entered" from="CarlDialogue" to="CarlDialogue" method="_on_CarlDialogue_area_entered"]
[connection signal="area_exited" from="CarlDialogue" to="CarlDialogue" method="_on_CarlDialogue_area_exited"]
